project2/modules/wordpress/sg.tf
resource "aws_security_group" "group_3" {
  name        = "group_3"
  description = "Allow TLS inbound traffic"
  vpc_id     = aws_vpc.wordpress_vpc.id
  
  ingress {
    description      = "TLS from VPC"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

    ingress {
    description      = "TLS from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

   ingress {
    description      = "TLS from VPC"
    from_port        = 3306
    to_port          = 3306
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

    ingress {
    description      = "TLS from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
}

# resource “aws_security_group_rule” “allow_mysql_inbound” {
#   type              = “ingress”
#   from_port         = 3306
#   to_port           = 3306
#   protocol          = “tcp”
#   cidr_blocks       = [“0.0.0.0/0”]
#   security_group_id = aws_db_instance.mysql_instance.security_group_ids[0]
# }
